<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ronald.medin.Activities.TreatmentInfoActivity"
    tools:showIn="@layout/activity_treatment_info">

    <EditText
        android:id="@+id/edit_treatmentInfo_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/EditTextFormHiddenStyling"/>
    <TextView
        android:id="@+id/text_treatmentInfo_medName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_h1"
        style="@style/LabelStyling"/>
    <TextView
        android:id="@+id/text_treatmentInfo_dateStartedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/LabelStyling"
        android:text="@string/treatmentDateStartedLabel"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_medName"
        app:layout_constraintLeft_toLeftOf="@id/text_treatmentInfo_typeLabel"/>
    <TextView
        android:id="@+id/text_treatmentInfo_dateStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStyling"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_medName"
        app:layout_constraintLeft_toRightOf="@id/text_treatmentInfo_dateStartedLabel"/>
    <TextView
        android:id="@+id/text_treatmentInfo_typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatmentTypeLabel"
        style="@style/LabelStyling"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_dateStartedLabel"
        app:layout_constraintRight_toLeftOf="@id/text_treatmentInfo_type"
        />
    <TextView
        android:id="@+id/text_treatmentInfo_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/EditTextFormStylingMedium"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_dateStartedLabel"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_treatmentInfo_usageAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStylingMedium"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/text_treatmentInfo_usageAmountLabel"
        app:layout_constraintLeft_toRightOf="@id/text_treatmentInfo_usageAmountLabel"/>
    <TextView
        android:id="@+id/text_treatmentInfo_usageAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatmentAmountLabel"
        style="@style/LabelStyling"
        app:layout_constraintLeft_toLeftOf="@id/text_treatmentInfo_typeLabel"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_type" />
    <EditText
        android:id="@+id/edit_treatmentInfo_notifyAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        style="@style/EditTextFormStylingMedium"
        app:layout_constraintBottom_toBottomOf="@id/text_treatmentInfo_notifyAmountLabel"
        app:layout_constraintLeft_toRightOf="@id/text_treatmentInfo_notifyAmountLabel"/>
    <TextView
        android:id="@+id/text_treatmentInfo_notifyAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatmentRemindWhenAmountLabel"
        style="@style/LabelStyling"
        app:layout_constraintLeft_toLeftOf="@id/text_treatmentInfo_typeLabel"
        app:layout_constraintTop_toBottomOf="@id/text_treatmentInfo_usageAmountLabel" />

    <Button
        android:id="@+id/btn_treatmentInfo_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_treatmentInfo_save"
        android:text="@string/delete"
        android:onClick="deleteTreatmentInfo"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_treatmentInfo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="editTreatment"
        android:text="@string/edit"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_treatmentInfo_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="saveTreatmentInfo"
        android:text="@string/save"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>
</android.support.constraint.ConstraintLayout>
