<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mediinfo_constraintlayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ronald.medin.Activities.MedicineInfoActivity"
    tools:showIn="@layout/activity_medicine_info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/medinfo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                style="@style/LabelStyling"
                android:textSize="@dimen/text_h1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/typeLabel"
                app:layout_constraintRight_toLeftOf="@id/medinfo_type"
                app:layout_constraintTop_toBottomOf="@id/medinfo_name"/>
            <TextView
                android:id="@+id/medinfo_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/packetQuantityLabel"
                app:layout_constraintRight_toLeftOf="@id/medinfo_packageQuantity"
                app:layout_constraintTop_toBottomOf="@id/medinfo_type"/>
            <TextView
                android:id="@+id/medinfo_packageQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_type"/>
            <TextView
                android:id="@+id/medinfo_descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/description"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_packageQuantity"/>
            <TextView
                android:id="@+id/medinfo_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_descriptionLabel"/>
            <TextView
                android:id="@+id/medinfo_warningLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/warning"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_description"/>
            <TextView
                android:id="@+id/medinfo_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_warningLabel"/>
            <TextView
                android:id="@+id/medinfo_usageInstructionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/usageInstructions"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_warning"/>
            <TextView
                android:id="@+id/medinfo_usageInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_usageInstructionsLabel"/>
            <TextView
                android:id="@+id/medinfo_sideEffectsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/sideEffects"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_usageInstructions" />
            <TextView
                android:id="@+id/medinfo_sideEffects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_sideEffectsLabel"/>
            <TextView
                android:id="@+id/medinfo_storageInstructionsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/storageInstructions"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_sideEffects"/>
            <TextView
                android:id="@+id/medinfo_storageInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_storageInstructionsLabel"/>
            <TextView
                android:id="@+id/medinfo_otherInformationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LabelStyling"
                android:text="@string/otherInformation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_storageInstructions"/>
            <TextView
                android:id="@+id/medinfo_otherInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medinfo_otherInformationLabel"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>


