<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ronald.medin.Activities.InventoryInfoActivity"
    tools:showIn="@layout/activity_inventory_info">

    <EditText
        android:id="@+id/edit_inventoryInfo_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/EditTextFormHiddenStyling"/>
    <TextView
        android:id="@+id/text_inventoryInfo_medName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:minWidth="200dp"
        style="@style/LabelStyling"/>
    <EditText
        android:id="@+id/edit_inventoryInfo_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/text_inventoryInfo_medName"
        app:layout_constraintTop_toBottomOf="@id/text_inventoryInfo_medName"
        style="@style/EditTextFormStylingMedium"
        android:inputType="number"
        android:hint="@string/value"/>
    <TextView
        android:id="@+id/text_inventoryInfo_packageUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/EditTextFormStylingMedium"
        app:layout_constraintLeft_toRightOf="@id/edit_inventoryInfo_quantity"
        app:layout_constraintTop_toBottomOf="@id/text_inventoryInfo_medName"/>
    <Button
        android:id="@+id/btn_inventoryInfo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="editInventory"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_inventoryInfo_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:onClick="saveInventory"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>
